frontend/test/should_fail/array_003.grg
using array_model_001;

rule concatenateWrongType {
	a:A;
	
	modify {
		eval {
			a.intArray = a.intArray + array<int>{ a.stringValue };
		}
	}
}